# ds-chat-app

./: __main__.py  pyproject.toml
infra/: client.py  server.py
pages/: __init__.py  client_page.py  server_page.py
shared/: __init__.py  page_utils.py
src/: __init__.py  client_app.py  server_app.py
src/controls/: __init__.py  message_bubble.py
src/entities/: __init__.py  client_identifier.py  message.py
src/infra/: client.py  server.py
src/infra/entities/: message.py
src/pages/: __init__.py  page_chat.py  page_connect.py  page_error.py
