[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["Pedro  <55058149+PedroG022@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.19.0"
fletrt = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
